// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useWithdraw > calls useSendTransaction with the correct parameters when withdrawing and unwrapping tokens 3`] = `
[
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCES_ALL",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_POOLS",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCE",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "vTokenAddress": "0xc2931B1fEa69b6D6dA65a50363A8D75d285e4da9",
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_TOKEN_BALANCES",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_BALANCE_OF",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "tokenAddress": "0x700868CAbb60e90d77B6588ce072d9859ec8E281",
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_BALANCE_OF",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "tokenAddress": "0x98f7A83361F7Ac8765CcEBAB1425da6b341958a7",
        },
      ],
    },
  ],
]
`;

exports[`useWithdraw > calls useSendTransaction with the correct parameters when withdrawing full supply 3`] = `
[
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCES_ALL",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_POOLS",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCE",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "vTokenAddress": "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_TOKEN_BALANCES",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_BALANCE_OF",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "tokenAddress": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        },
      ],
    },
  ],
]
`;

exports[`useWithdraw > calls useSendTransaction with the correct parameters when withdrawing full supply and unwrapping 3`] = `
[
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCES_ALL",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_POOLS",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCE",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "vTokenAddress": "0x2E7222e51c0f6e98610A1543Aa3836E092CDe62c",
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_TOKEN_BALANCES",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_BALANCE_OF",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "tokenAddress": "0xbBbBBBBbbBBBbbbBbbBbbbbBBbBbbbbBbBbbBBbB",
        },
      ],
    },
  ],
]
`;

exports[`useWithdraw > calls useSendTransaction with the correct parameters when withdrawing native token 3`] = `
[
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCES_ALL",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_POOLS",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCE",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "vTokenAddress": "0x2E7222e51c0f6e98610A1543Aa3836E092CDe62c",
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_TOKEN_BALANCES",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_BALANCE_OF",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "tokenAddress": "0xbBbBBBBbbBBBbbbBbbBbbbbBBbBbbbbBbBbbBBbB",
        },
      ],
    },
  ],
]
`;

exports[`useWithdraw > calls useSendTransaction with the correct parameters when withdrawing tokens 3`] = `
[
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCES_ALL",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_POOLS",
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_V_TOKEN_BALANCE",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "vTokenAddress": "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_TOKEN_BALANCES",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
        },
      ],
    },
  ],
  [
    {
      "queryKey": [
        "GET_BALANCE_OF",
        {
          "accountAddress": "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
          "chainId": 97,
          "tokenAddress": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        },
      ],
    },
  ],
]
`;
